# nodejs-snowflake

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  binding.gyp  generateUniqueID.js  getMacID.js  index.js  package-lock.json  package.json  test  tsconfig.json
.github/workflows/: artifacts.yml  nodejs.yml  npm.yml  release.yml  tests.yml
cppsrc/: generate_hash.cpp  generate_hash.h  ipaddress.cpp  ipaddress.h  main.cpp
lib/: generateUniqueID.d.ts  generateUniqueID.d.ts.map  generateUniqueID.js  generateUniqueID.js.map  getMacID.d.ts  getMacID.d.ts.map  getMacID.js  getMacID.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  isFalsy.d.ts  isFalsy.d.ts.map  isFalsy.js  isFalsy.js.map  test.js  test.js.map
src/: generateUniqueID.ts  getMacID.ts  getmac.d.ts  index.ts  isFalsy.ts  lib.rs  nanotimer.d.ts  test.ts  utils.rs
tests/: generateUniqueID.ts  snowflake_core.rs
