[package]
name = "nodejs-snowflake"
version = "2.0.0"
authors = ["Utkarsh Srivastava <utkarsh@sagacious.dev>"]
edition = "2021"
description = "Generate time sortable 64 bits unique ids for distributed systems (inspired from twitter snowflake)"
license = "Apache 2.0"
repository = "https://github.com/utkarsh-pro/nodejs-snowflake.git"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen =  { version = "0.2.63", features = ["serde-serialize"] }
js-sys = "0.3.56"
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
